# project-telegram-marketplace

./: .gitignore  README.md  config.py  main.py  pyproject.toml
bot/: handlers.py  states.py
models/: order.py  product.py
utils/: data_manager.py  descriptors.py  patterns.py
